  - cash receipts: added document's positions clearing when customer 
    is changing (alec) 
  - lms-traffic-logiptables: added 'networks' option (alec)
  - BTS#0000625: one-address DHCP ranges allowed (alec)
  - lmsd: don't save config.status when using configure script
    with option --help (alec)
  - BTS#0000603: lmsd: instance names with spaces works with -i option (alec)  

version 1.9.5 Tagar (2007-02-05):

  - traffic stats: saving chosen network in session (chilek)
  - rtticketedit: fixed regression connected with undefined customerid (chilek)
    **********************************************************************************
  - increased requirements to MySQL 5.0.7 (alec)
  - removed support for non-unicode encoding by option database/server_encoding (alec)
  - added mysql's "SET NAMES utf8" in scripts and daemon (alec)
    **********************************************************************************
  - fixed warning setting in customer searching results list (alec)
  - balanceadd: fixed incorrect datetime checking - we let datetime to be
    only date, but we have to append the time in this situation (chilek)
  - new configuration option default_monthly_payday - a day of payment for new assignments
    (chilek)
  - lms-rtparser: fixed comparison bug connected with charset encoding (chilek)
  - lms-rtparser: unescaping \n sequence in autoreply_body (chilek)
  - changed configuration file path in index.php of php-ui to be more readable
    for unskilled users - putted code that scans for lms.ini few lines below
    'do-not-change' warning and added support for /etc/lms/lms-httpvhost.ini
    (lukasz)
  - boosted download of database backup files. We don't need viewer in LMS, because
    it's USELESS (chilek)
  - added indexes on nodes.ownerid and nodes.ipaddr_pub (alec)
  - added confirm message for last operation deleting in New Operation page (alec)
  - added --lmslibdir and --lmsbindir .configure script's options (alec/Libor)