@@ -11,7 +11,9 @@ version ? (????-??-??):
   - lmsd: don't save config.status when using configure script
     with option --help (alec)
   - BTS#0000603: lmsd: instance names with spaces works with -i option (alec)  
-
+  - BTS#0000594: clickable gateway record when selecting IP for network
+    device's IP (alec)
+  
 version 1.9.5 Tagar (2007-02-05):
 
   - traffic stats: saving chosen network in session (chilek)
